fix alignment

--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ img{max-width: 60px;
     min-width: 9rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 30px;
     padding: 30px;
 
